--- a/boilerplate.ipynb
+++ b/boilerplate.ipynb
@@ -14,7 +14,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-24T15:35:38.035684Z",
      "start_time": "2017-06-24T15:35:36.054637Z"
-    }
+    },
+    "init_cell": true
    },
    "outputs": [
     {
@@ -114,7 +115,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-23T12:05:52.453384Z",
      "start_time": "2017-06-23T12:05:52.447053Z"
-    }
+    },
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -135,7 +137,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-23T12:06:00.675189Z",
      "start_time": "2017-06-23T12:05:59.923082Z"
-    }
+    },
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -155,7 +158,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-23T12:06:05.398149Z",
      "start_time": "2017-06-23T12:06:05.388249Z"
-    }
+    },
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -176,7 +180,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-23T12:06:13.328823Z",
      "start_time": "2017-06-23T12:06:13.323643Z"
-    }
+    },
+    "init_cell": true
    },
    "outputs": [
     {
@@ -201,7 +206,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-23T12:06:17.570168Z",
      "start_time": "2017-06-23T12:06:17.565477Z"
-    }
+    },
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -526,23 +532,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Initialization Cell",
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
