--- a/ml/boosting/analysing-adaboost.ipynb
+++ b/ml/boosting/analysing-adaboost.ipynb
@@ -593,7 +593,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# core"
    ]
@@ -605,7 +607,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:04:07.209959Z",
      "start_time": "2017-06-21T17:04:07.198101Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -627,7 +630,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:04:35.183698Z",
      "start_time": "2017-06-21T17:04:34.891719Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -662,7 +666,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:07:41.192826Z",
      "start_time": "2017-06-21T17:07:41.119529Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -676,7 +681,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:08:52.265036Z",
      "start_time": "2017-06-21T17:08:52.257675Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -690,7 +696,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:09:17.428975Z",
      "start_time": "2017-06-21T17:09:17.274893Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -726,7 +733,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:09:36.227333Z",
      "start_time": "2017-06-21T17:09:26.090447Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -790,7 +798,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:06:35.948471Z",
      "start_time": "2017-06-21T17:06:35.603880Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -835,7 +844,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:32:47.154661Z",
      "start_time": "2017-06-21T17:32:47.148820Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -865,7 +875,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:39:38.876736Z",
      "start_time": "2017-06-21T17:39:38.870697Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -890,7 +901,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:49:21.147504Z",
      "start_time": "2017-06-21T17:49:21.139456Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -921,7 +933,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:55:00.872685Z",
      "start_time": "2017-06-21T17:55:00.799404Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1422,7 +1435,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:55:54.000752Z",
      "start_time": "2017-06-21T17:55:53.971671Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1890,7 +1904,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:58:23.691901Z",
      "start_time": "2017-06-21T17:58:23.661583Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2358,7 +2373,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:58:18.063840Z",
      "start_time": "2017-06-21T17:58:18.052911Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2384,7 +2400,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-22T12:40:11.275962Z",
      "start_time": "2017-06-22T12:40:11.270267Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2409,7 +2426,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-22T12:40:26.626134Z",
      "start_time": "2017-06-22T12:40:26.617844Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2434,7 +2452,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:38:58.571069Z",
      "start_time": "2017-06-21T18:38:58.445632Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2466,7 +2485,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:51:33.132797Z",
      "start_time": "2017-06-21T18:51:33.126643Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2480,7 +2500,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:52:14.966190Z",
      "start_time": "2017-06-21T18:52:14.947420Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2494,7 +2515,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:49:24.034019Z",
      "start_time": "2017-06-21T18:49:24.024785Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2541,7 +2563,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:48:22.790796Z",
      "start_time": "2017-06-21T18:48:22.783645Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2566,7 +2589,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:36:18.938820Z",
      "start_time": "2017-06-21T18:36:18.920763Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2599,7 +2623,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:22:42.630583Z",
      "start_time": "2017-06-21T18:22:42.381249Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2629,7 +2654,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:08:16.838603Z",
      "start_time": "2017-06-21T18:08:16.829969Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2643,7 +2669,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:07:05.600340Z",
      "start_time": "2017-06-21T18:07:05.591361Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2683,7 +2710,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T18:04:21.015729Z",
      "start_time": "2017-06-21T18:04:21.009325Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2708,7 +2736,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:30:59.762204Z",
      "start_time": "2017-06-21T17:30:59.749235Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2731,7 +2760,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:31:01.781228Z",
      "start_time": "2017-06-21T17:31:01.714459Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2763,7 +2793,8 @@
     "ExecuteTime": {
      "end_time": "2017-06-21T17:35:40.918279Z",
      "start_time": "2017-06-21T17:35:40.910105Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2784,49 +2815,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
@@ -2848,7 +2893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
