--- a/ml/linear-models-for-classification/laplace-approximation.ipynb
+++ b/ml/linear-models-for-classification/laplace-approximation.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-31T12:08:21.941161Z",
+     "start_time": "2017-10-31T12:08:21.376510Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -345,13 +351,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Taylor's theorem expansion of a function f(x) around the point $x_0$ is \n",
-    "$$\n",
-    "\\arrthree{\n",
-    "f(x) &= f(x_{0}) + f'(x_{0})(x-x_{0}) + \n",
-    "\\\\\n",
-    "& +\\frac12 f''(x_{0})(x-x_{0})^{2}+R\n",
-    "}$$\n",
+    "Taylor's theorem expansion of a function f(x) around the point $x_0$ is   \n",
+    "\n",
+    "$\n",
+    "f(x) = f(x_{0}) + f'(x_{0})(x-x_{0}) + \n",
+    " +\\frac12 f''(x_{0})(x-x_{0})^{2}+R\n",
+    "$  \n",
+    "\n",
     "where $R=O\\left((x-x_{0})^{3}\\right)$."
    ]
   },
@@ -817,6 +823,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -834,7 +841,7 @@
   "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -846,7 +853,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -857,15 +865,51 @@
   },
   "nav_menu": {},
   "toc": {
-   "navigate_menu": true,
+   "nav_menu": {},
    "number_sections": true,
-   "sideBar": false,
-   "threshold": 6,
+   "sideBar": true,
+   "skip_h1_title": false,
    "toc_cell": false,
+   "toc_position": {
+    "height": "788px",
+    "left": "0px",
+    "right": "auto",
+    "top": "134px",
+    "width": "232px"
+   },
    "toc_section_display": "block",
-   "toc_window_display": false
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
