--- a/ml/linear-models-for-classification/probabilistic-discriminative-models.ipynb
+++ b/ml/linear-models-for-classification/probabilistic-discriminative-models.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-31T11:19:43.559749Z",
+     "start_time": "2017-10-31T11:19:42.966721Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -371,16 +377,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since $\\sigma(a) = \\invp{1 + \\EXP{-a}}$, we have\n",
-    "$$\n",
-    "\\arrthree{\n",
-    "\\diff{\\sigma}{a}\n",
-    "&= -\\Bracket{1 + \\EXP{-a}}^{-2} (- \\EXP{-a}) \\\\\n",
-    "&= \\fracrec{1 + \\EXP{-a}} \\frac{\\EXP{-a}}{1 + \\EXP{-a}} \\\\\n",
-    "\\diff{\\sigma}{a}\n",
-    "&= \\sigma(a) (1 - \\sigma(a))\n",
-    "}\n",
-    "$$"
+    "Since $\\sigma(a) = \\invp{1 + \\EXP{-a}}$, we have  \n",
+    "$\\arrthree{\n",
+    "\\ds \\diff{\\sigma}{a}\n",
+    "&= \\ds -\\Bracket{1 + \\EXP{-a}}^{-2} (- \\EXP{-a}) \\\\\n",
+    "&= \\ds \\fracrec{1 + \\EXP{-a}} \\frac{\\EXP{-a}}{1 + \\EXP{-a}} \\\\\n",
+    "\\ds \\diff{\\sigma}{a}\n",
+    "&= \\ds \\sigma(a) (1 - \\sigma(a))\n",
+    "}$"
    ]
   },
   {
@@ -395,9 +399,7 @@
     "* $a_n = \\wt \\phi_n$\n",
     "\n",
     "The likelihood takes the form\n",
-    "$$\n",
-    "p(\\tb \\mid \\wb) = \\prodnN y_n^{t_n} \\Brace{1-y_n}^{1-t_n}\n",
-    "$$"
+    "$\\ds p(\\tb \\mid \\wb) = \\prodnN y_n^{t_n} \\Brace{1-y_n}^{1-t_n}$"
    ]
   },
   {
@@ -406,36 +408,34 @@
    "source": [
     "### cross entropy error\n",
     "\n",
-    "$$\n",
-    "\\arrthree{\n",
+    "$\\arrthree{\n",
     "E(\\wb) &=\n",
     "- \\ln p(\\tb \\mid \\wb)\n",
     "\\\\ &=\n",
     "- \\sumnN \\Brace{\n",
     "t_n \\ln y_n + (1 - t_n) \\ln (1 - y_n)\n",
     "}\n",
-    "}\n",
-    "$$"
+    "}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The gradient of the error fucntion wrt **w** is\n",
-    "$$\n",
-    "\\arrthree{\n",
-    "\\nabla E(\\wb) &=\n",
+    "The gradient of the error fucntion wrt **w** is  \n",
+    "\n",
+    "$\\arrthree{\n",
+    "\\nabla E(\\wb) \n",
+    "&= \\ds \n",
     "-\\sumnN\n",
     "\\frac{t_n}{y_n} \\Paran{y_n(1-y_n)} \\phi_n\n",
     "- \\frac{1-t_n}{1-y_n} \\Paran{y_n(1-y_n)} \\phi_n\n",
-    "\\\\ &=\n",
+    "\\\\ &= \\ds \n",
     "-\\sumnN\n",
     "t_n (1 - y_n) \\phi_n - (1-t_n)y_n \\phi_n\n",
-    "\\\\ &=\n",
+    "\\\\ &= \\ds \n",
     "\\sumnN (y_n - t_n) \\phi_n\n",
-    "}\n",
-    "$$"
+    "}$"
    ]
   },
   {
@@ -445,10 +445,9 @@
     "* The contribution to the gradient from data point n is given by the \"error\" $y_n − t_n$ between the actual and predicted, times $\\phi_n$. \n",
     "* Furthermore, this takes precisely the same form as the gradient of the sum-of-squares error function for the linear regression model.\n",
     "* This also yields well to a sequential algo in which\n",
-    "$$\n",
-    "\\nabla E(\\wb) = \\sumnN \\nabla E_n(\\wb) \\\\\n",
+    "$ \\ds \\nabla E(\\wb) = \\sumnN \\nabla E_n(\\wb) \\\\\n",
     "\\text{ where } \\nabla E_n(\\wb) = (y_n - t_n) \\phi_n\n",
-    "$$"
+    "$"
    ]
   },
   {
@@ -486,7 +485,7 @@
    "source": [
     "# IRLS\n",
     "\n",
-    "[IRLS](pdm-irls.ipynb)"
+    "[IRLS](pdm-irls.html)"
    ]
   },
   {
@@ -980,7 +979,7 @@
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -992,7 +991,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -1002,12 +1002,45 @@
    "eqNumInitial": 0
   },
   "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
    "toc_cell": false,
-   "toc_number_sections": true,
-   "toc_threshold": 6,
+   "toc_position": {},
+   "toc_section_display": "block",
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
