--- a/ml/linear-models-for-classification/probabilistic-generative-models.ipynb
+++ b/ml/linear-models-for-classification/probabilistic-generative-models.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-31T10:48:03.351086Z",
+     "start_time": "2017-10-31T10:48:02.803142Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -99,6 +105,7 @@
     "$\n",
     "$\n",
     "\\newcommand{\\commentgray}[1]{\\color{gray}{\\text{#1}}}\n",
+    "\\newcommand{\\ds}{\\displaystyle}\n",
     "$"
    ]
   },
@@ -312,25 +319,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\arrthree{\n",
-    "p(\\Ca_1 \\mid \\xb)\n",
-    "&=\n",
+    "$\\arrthree{\n",
+    "\\ds p(\\Ca_1 \\mid \\xb)\n",
+    "&= \\ds \n",
     "\\frac\n",
     "{p(\\xb \\mid \\Ca_1) ~p(\\Ca_1)}\n",
     "{p(\\xb \\mid \\Ca_1) ~p(\\Ca_1) + p(\\xb \\mid \\Ca_2) ~p(\\Ca_2)}\n",
     "\\\\\n",
-    "&=\\invp{1 + \n",
+    "&= \\ds \n",
+    "\\invp{1 + \n",
     "\\frac{p(\\xb \\mid \\Ca_2) ~p(\\Ca_2)}{p(\\xb \\mid \\Ca_1) ~p(\\Ca_1)}\n",
     "}\n",
     "\\\\\n",
-    "&= \\fracone{1 + \\exp(-a)} = \\sigma(a)\n",
-    "}\n",
-    "$$\n",
-    "where\n",
-    "$$\n",
-    "a = \\Lnb{\\frac{p(\\xb \\mid \\Ca_1) ~p(\\Ca_1)}{p(\\xb \\mid \\Ca_2) ~p(\\Ca_2)}}\n",
-    "$$"
+    "&= \\ds \n",
+    "\\fracone{1 + \\exp(-a)} = \\sigma(a)\n",
+    "}$\n",
+    "\n",
+    "where $\n",
+    "\\ds a = \\Lnb{\\frac{p(\\xb \\mid \\Ca_1) ~p(\\Ca_1)}{p(\\xb \\mid \\Ca_2) ~p(\\Ca_2)}}\n",
+    "$"
    ]
   },
   {
@@ -339,10 +346,8 @@
    "source": [
     "### Logistic Sigmoid\n",
     "\n",
-    "$\\sigma(a)$ is the **logistic sigmoid** function defined by\n",
-    "$$\n",
-    "\\sigma(a) = \\fracrec{1 + \\exp(-a)}\n",
-    "$$\n",
+    "$\\sigma(a)$ is the **logistic sigmoid** function defined by  \n",
+    "$ \\ds \\sigma(a) = \\fracrec{1 + \\exp(-a)}$\n",
     "\n",
     "* Sigmoid mean S-shaped\n",
     "* Aka squashing function\n",
@@ -356,10 +361,8 @@
    "source": [
     "### Logit function\n",
     "\n",
-    "Inverse of logistic sigmoid, called logit function, is given by\n",
-    "$$\n",
-    "a = \\Lnb{\\frac{\\sigma}{1-\\sigma}}\n",
-    "$$\n",
+    "Inverse of logistic sigmoid, called logit function, is given by  \n",
+    "$a = \\Lnb{\\frac{\\sigma}{1-\\sigma}}$\n",
     "\n",
     "* represents the log of ratio of probabilities ln[$p(\\Ca_1 \\mid \\xb)/p(\\Ca_2 \\mid \\xb)$] called **log odds**"
    ]
@@ -375,17 +378,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For K>2 classes, we have\n",
-    "$$\n",
-    "\\arrthree{\n",
-    "p(\\Ca_k \\mid \\xb) &= \n",
+    "For K>2 classes, we have  \n",
+    "$\\arrthree{\n",
+    "\\ds p(\\Ca_k \\mid \\xb) \n",
+    "&= \\ds \n",
     "\\frac\n",
     "{p(\\xb \\mid \\Ca_k) ~p(\\Ca_k)}\n",
     "{\\sum_j ~p(\\xb \\mid \\Ca_j) ~p(\\Ca_j)}\n",
-    "\\\\ &=\n",
+    "\\\\ &= \\ds \n",
     "\\frac{\\exp(a_k)}{\\sum_j ~\\exp(a_j)}\n",
-    "}\n",
-    "$$\n",
+    "}$\n",
+    "\n",
     "* This is called **normalized exponential**\n",
     "* Here $a_k = \\ln p(\\xb \\mid \\Ca_k) ~p(\\Ca_k)$\n",
     "* aka **softmax function**\n",
@@ -547,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ML solution"
+    "# Maximum Likelihood"
    ]
   },
   {
@@ -573,17 +576,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For class 1\n",
-    "$$\n",
+    "For class 1  \n",
+    "$ \\ds \n",
     "p(\\xbn, \\Caone) = p(\\Caone) ~p(\\xbn \\mid \\Caone)\n",
     "= \\pi \\Nl{\\xbn}{\\mub_1}{\\Sigma}\n",
-    "$$\n",
+    "$\n",
     "\n",
-    "For class 2\n",
-    "$$\n",
+    "For class 2  \n",
+    "$ \\ds \n",
     "p(\\xbn, \\Catwo) = p(\\Catwo) ~p(\\xbn \\mid \\Catwo)\n",
     "= (1 - \\pi) \\Nl{\\xbn}{\\mub_2}{\\Sigma}\n",
-    "$$"
+    "$"
    ]
   },
   {
@@ -592,15 +595,13 @@
    "source": [
     "Likelihood\n",
     "\n",
-    "$$\n",
-    "\\arrthree{\n",
-    "p(\\tb \\mid \\pi, \\mub_1, \\mub_2, \\Sigma)\n",
-    "&=\n",
+    "$\\arrthree{\n",
+    "\\ds p(\\tb \\mid \\pi, \\mub_1, \\mub_2, \\Sigma)\n",
+    "&= \\ds \n",
     "\\prodnN\n",
     "\\Bracket{\\pi \\Nl{\\xbn}{\\mub_1}{\\Sigma}}^{t_n}\n",
     "\\Bracket{(1-\\pi) \\Nl{\\xbn}{\\mub_2}{\\Sigma}}^{1-t_n}\n",
-    "}\n",
-    "$$"
+    "}$"
    ]
   },
   {
@@ -609,20 +610,18 @@
    "source": [
     "### wrt pi\n",
     "\n",
-    "Terms of interest\n",
-    "$$\n",
-    "\\sumnN \\Brace{t_n \\ln \\pi + (1-t_n) \\ln (1-\\pi)}\n",
-    "$$\n",
+    "Terms of interest  \n",
+    "$\\sumnN \\Brace{t_n \\ln \\pi + (1-t_n) \\ln (1-\\pi)}$\n",
     "\n",
-    "Setting the derivative of this wrt $\\pi$ to zero,\n",
-    "$$\n",
-    "\\arrthree{\n",
-    "\\sumnN \\frac{t_n}{\\pi} - \\frac{1 - t_n}{1-\\pi} &= 0\n",
-    "\\\\\n",
+    "Setting the derivative of this wrt $\\pi$ to zero,  \n",
+    "$\\arrthree{\n",
+    "\\ds \\sumnN \\frac{t_n}{\\pi} - \\frac{1 - t_n}{1-\\pi} &= 0\n",
+    "\\\\ \\ds \n",
     "\\sumnN t_n (1-\\pi) - (1-t_n) \\pi &= 0 \\\\\n",
-    "\\pi = \\fracrec{N} \\sumnN t_n &= \\frac{N_1}{N} = \\frac{N_1}{N_1 + N_2}\n",
-    "}\n",
-    "$$"
+    "\\pi = \\ds \\fracrec{N} \\sumnN t_n \n",
+    "&= \\ds \n",
+    "\\frac{N_1}{N} = \\frac{N_1}{N_1 + N_2}\n",
+    "}$"
    ]
   },
   {
@@ -636,25 +635,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Terms of interest\n",
-    "$$\n",
+    "Terms of interest  \n",
+    "$\n",
     "\\sumnN t_n \\ln \\Nl{\\xbn}{\\mub_k}{\\Sigma} =\n",
     "-\\half \\sumnN t_n (\\xbn - \\mub_k)^T \\Sigmai (\\xbn - \\mub_k)\n",
-    "$$"
+    "$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diff and setting to zero, we have\n",
-    "$$\n",
-    "\\arrthree{\n",
-    "\\sumnN t_n \\Sigmai (\\xbn - \\mub_k) &= 0 \\\\\n",
-    "\\sumnN t_n \\mub_k  &= \\sumnN t_n \\xbn\\\\\n",
-    "\\mub_k &= \\fracrec{N} \\sumnN t_n \\xbn\n",
-    "}\n",
-    "$$"
+    "Diff and setting to zero, we have  \n",
+    "$\\arrthree{\n",
+    "\\ds \\sumnN t_n \\Sigmai (\\xbn - \\mub_k) &= 0 \\\\\n",
+    "\\ds \\sumnN t_n \\mub_k  &= \\ds \\sumnN t_n \\xbn\\\\\n",
+    "\\ds \\mub_k &= \\ds \\fracrec{N_k} \\sumnN t_n \\xbn\n",
+    "}$"
    ]
   },
   {
@@ -668,59 +665,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Terms of interest\n",
-    "$$\n",
-    "\\arrthree{\n",
+    "Terms of interest  \n",
+    "$\\arrthree{\n",
     "\\sumkK \\Brace{\n",
     "-\\half \\sumnN t_n \\ln \\Mod{\\Sigma} \n",
     "-\\half \\sumnN t_n (\\xbn - \\mub_k)^T \\Sigmai (\\xbn - \\mub_k)}\n",
-    "\\\\\n",
-    "\\displaystyle \\frachalf{N} \\ln \\Mod{\\Sigma} - \\half \\sum_{n \\in \\Ca_k} (\\xbn - \\mub_k)^T \\Sigmai (\\xbn - \\mub_k)\n",
-    "}\n",
-    "$$"
+    "\\\\ = \n",
+    "\\ds \\frachalf{N} \\ln \\Mod{\\Sigma} - \\half \\sum_{n \\in \\Ca_k} (\\xbn - \\mub_k)^T \\Sigmai (\\xbn - \\mub_k)\n",
+    "}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\displaystyle \\sum_{n \\in \\Ca_k} (\\xbn - \\mub_k)^T \\Sigmai (\\xbn - \\mub_k)\n",
-    "\\\\\n",
-    "N_k\n",
-    "\\underbrace{\\fracrec{N_k} \\displaystyle \\sum_{n \\in \\Ca_k} \n",
-    "\\Brace{\n",
+    "Simplifications  \n",
+    "$\n",
+    "\\ds \\sum_{n \\in \\Ca_k} (\\xbn - \\mub_k)^T \\Sigmai (\\xbn - \\mub_k)\n",
+    "\\\\ = \\ds\n",
+    "\\sum_{n \\in \\Ca_k} \n",
+    "\\text{Trace} \\Brace{\n",
     "(\\xbn - \\mub_k)^T \\Sigmai (\\xbn - \\mub_k)\n",
-    "}}_{\\Sb_k}\n",
-    "\\\\\n",
-    "N_k \\Sb_k\n",
-    "$$\n",
+    "}\n",
+    "\\\\ = \\ds\n",
+    "\\sum_{n \\in \\Ca_k} \n",
+    "\\text{Trace} \\Brace{\n",
+    "\\Sigmai (\\xbn - \\mub_k) (\\xbn - \\mub_k)^T\n",
+    "}\n",
+    "\\\\ = \\ds\n",
+    "\\text{Trace} \\Brace{ \\Sigmai \n",
+    "\\sum_{n \\in \\Ca_k} \n",
+    "(\\xbn - \\mub_k) (\\xbn - \\mub_k)^T\n",
+    "}\n",
+    "\\\\ = \\ds\n",
+    "\\text{Trace} \\Brace{ \\Sigmai N_k \\Sb_k}\n",
+    "$\n",
     "\n",
-    "where\n",
-    "$$\n",
-    "\\Sb_k = \\fracrec{N_k} \\displaystyle \\sum_{n \\in \\Ca_k} \n",
-    "\\Brace{\n",
-    "(\\xbn - \\mub_k)^T \\Sigmai (\\xbn - \\mub_k)\n",
-    "}\n",
-    "$$"
+    "where  \n",
+    "$\\Sb_k = \\ds \\fracone{N_k} \\sum_{n \\in \\Ca_k} (\\xbn - \\mub_k) (\\xbn - \\mub_k)^T$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "hence, terms of interest becomes\n",
-    "$$\n",
-    "\\displaystyle -\\frachalf{N} \\ln \\Mod{\\Sigma} - \\half  \\sumkK N_k \\Sb_k\n",
+    "hence, terms of interest becomes  \n",
+    "$\n",
+    "\\ds  -\\frachalf{N} \\ln \\Mod{\\Sigma} - \\half  \\sumkK N_k \\traceb{\\Sigmai \\Sb_k}\n",
     "\\\\\n",
-    "\\displaystyle -\\frachalf{N} \\ln \\Mod{\\Sigma} - \\frachalf{N} \\sumkK \\frac{N_k}{N} \\Sb_k\n",
+    "\\ds = -\\frachalf{N} \\ln \\Mod{\\Sigma} - \\frachalf{N} \\sumkK \\frac{N_k}{N} \\traceb{\\Sigmai \\Sb_k}\n",
     "\\\\\n",
-    "\\displaystyle -\\frachalf{N} \\ln \\Mod{\\Sigma} - \\frachalf{N} \\traceb{\\Sigmai \\Sb}\n",
-    "$$\n",
-    "where\n",
-    "$$\n",
-    "\\Sb = \\sumkK \\frac{N_k}{N} \\Sb_k\n",
-    "$$"
+    "\\ds = -\\frachalf{N} \\ln \\Mod{\\Sigma} - \\frachalf{N} \\traceb{\\Sigmai \\Sb}\n",
+    "$\n",
+    "\n",
+    "where  \n",
+    "$\\ds \\Sb = \\sumkK \\frac{N_k}{N} \\Sb_k$"
    ]
   },
   {
@@ -759,7 +758,7 @@
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -771,7 +770,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -779,8 +779,47 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
