--- a/ml/linear-models-for-regression/bias-variance-decomposition.ipynb
+++ b/ml/linear-models-for-regression/bias-variance-decomposition.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-31T06:48:12.807401Z",
+     "start_time": "2017-10-31T06:48:12.225321Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -405,6 +411,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# wiki"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The derivation of the bias–variance decomposition for squared error proceeds as follows.[6][7] \n",
+    "\n",
+    "$y = f(x) + \\epsilon$  \n",
+    "$\\hat{f}$ is our estimate of $f$.  \n",
+    "For notational convenience, abbreviate f = f(x) and $\\hat{f} = \\hat{f}(x)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, recall that, by definition, for any random variable X, we have $\\mathrm{Var}[X] = \\mathrm{E}[X^2] - \\mathrm{E}[X]^2$  \n",
+    "Rearranging, we get: $\\mathrm{E}[X^2] = \\mathrm{Var}[X] + \\mathrm{E}[X]^2$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since f is deterministic, $\\mathrm{E}[f] = f$  \n",
+    "This, given $y=f+\\epsilon$  and ${\\mathrm{E}}[\\epsilon ]=0$, implies:  \n",
+    "${\\mathrm{E}}[y]={\\mathrm{E}}[f+\\epsilon ]={\\mathrm{E}}[f]=f.$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also, since ${\\mathrm{Var}}[\\epsilon ]=\\sigma ^{2}$, we have  \n",
+    "$\n",
+    "\\begin{array}{rl}\n",
+    "\\mathrm{Var}[y] &= {\\mathrm{E}}[( y - {\\mathrm{E}}[y])^{2}]\n",
+    "\\\\ &= \\mathrm{E}[(y-f)^{2}]\n",
+    "\\\\ &= {\\mathrm{E}}[(f+\\epsilon -f)^{2}]\n",
+    "\\\\ &= {\\mathrm{E}}[\\epsilon ^{2}]\n",
+    "\\\\ &= {\\mathrm{Var}}[\\epsilon ]+{\\mathrm{E}}[\\epsilon ]^{2}\n",
+    "\\\\ &= \\sigma ^{2}    \n",
+    "\\end{array}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus, since $\\epsilon$  and ${\\hat {f}}$ are independent, we can write  \n",
+    "$\n",
+    "\\begin{array}{rl}\n",
+    "\\mathrm{E} \\left[ (y- \\hat{f})^{2} \\right] \n",
+    "&=\n",
+    "\\mathrm {E} \\left[ y^{2} +\\hat{f}^{2}-2y{\\hat{f}} \\right]\n",
+    "\\\\ &=\n",
+    "\\mathrm{E}[y^{2}]+ \\mathrm{E}[\\hat {f}^{2}] - \\mathrm {E}[2y \\hat{f}]\n",
+    "\\\\ &=\n",
+    "\\mathrm{Var}[y] + \\mathrm{E}[y]^{2} + \\mathrm{Var}[\\hat {f}] + \\mathrm {E}[\\hat{f}]^{2} - 2f\\mathrm{E}[\\hat {f}]\n",
+    "\\\\ &=\n",
+    "\\mathrm {Var}[y] + \\mathrm {Var}[\\hat{f}] + \n",
+    "( f^{2} - 2f \\mathrm{E}[\\hat{f}] + \\mathrm{E}[\\hat {f}]^{2})\n",
+    "\\\\ &= \n",
+    "\\mathrm {Var}[y] + \\mathrm {Var}[\\hat {f}] + ( f - \\mathrm{E}[\\hat {f}])^{2}\n",
+    "\\\\ &= \n",
+    "\\sigma^{2} + \\mathrm{Var}[\\hat {f}] + \\mathrm{Bias}[\\hat {f}]^{2}\n",
+    "\\end{array}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Practical Value\n",
     "\n",
     "* Zilch\n",
@@ -412,86 +495,6 @@
     "* If there are large no. of data sets, we can combine them into a single large dataset\n",
     "* This would reduce the overall level of overfitting for a given model complexity"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -510,7 +513,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -518,8 +522,47 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
