--- a/ml/probability-distributions/3-gaussian-conditional-marginal.ipynb
+++ b/ml/probability-distributions/3-gaussian-conditional-marginal.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,39 +589,39 @@
     "\\arrthree{\n",
     "\\text{Terms having }\\xbb\n",
     "&=\n",
-    "-\\frac{1}{2}(\\xab-\\muab)^T \\lab \\xbb\n",
+    "\\displaystyle -\\frac{1}{2}(\\xab-\\muab)^T \\lab \\xbb\n",
     "\\\\\n",
     "&~~~ \n",
-    "-\\frac{1}{2}\\xbb^T \\lba (\\xab-\\muab)\n",
+    "\\displaystyle -\\frac{1}{2}\\xbb^T \\lba (\\xab-\\muab)\n",
     "\\\\\n",
     "&~~~\n",
-    "-\\frac{1}{2} \\xbb^T \\lbb \\xbb\n",
+    "\\displaystyle -\\frac{1}{2} \\xbb^T \\lbb \\xbb\n",
     "+ \\xbb^T \\lbb \\mubb\n",
     "\\\\\n",
     "&=\n",
-    "-\\frac{1}{2} \\xbb^T \\lbb \\xbb\n",
+    "\\displaystyle -\\frac{1}{2} \\xbb^T \\lbb \\xbb\n",
     "+ \\xbb^T \\lbb \\mubb\n",
     "- \\xbb^T \\lba (\\xab-\\muab)\n",
     "\\\\\n",
     "&=\n",
-    "-\\frac{1}{2} \\xbb^T \\lbb \\xbb\n",
-    "+ \\xbb^T ( \\lbb \\mubb - \\lba (\\xab-\\muab))\n",
+    "\\displaystyle -\\frac{1}{2} \\xbb^T \\lbb \\xbb\n",
+    "+ \\xbb^T \\underbrace{( \\lbb \\mubb - \\lba (\\xab-\\muab))}_{\\displaystyle \\mb}\n",
     "\\\\\n",
     "&=\n",
-    "-\\frac{1}{2} \\xbb^T \\lbb \\xbb\n",
+    "\\displaystyle -\\frac{1}{2} \\xbb^T \\lbb \\xbb\n",
     "+ \\xbb^T \\mb\n",
-    "\\\\ &=\n",
+    "\\\\ &= \\displaystyle\n",
     "-\\half\n",
     "\\left\\{\n",
     "  \\xbb^T \\lbb \\xbb - 2 \\xbb^T \\mb\n",
     "\\right\\} & \\commentgray{Apply the f. formula}\n",
     "\\\\\n",
-    "&=\n",
+    "&= \\displaystyle\n",
     "-\\half\n",
     "\\left\\{\n",
     "  (\\xbb - \\lbbi \\mb)^T \\lbb (\\xbb - \\lbbi \\mb) - \\mb^T \\lbbi \\mb\n",
     "\\right\\}\n",
-    "\\\\ &=\n",
+    "\\\\ &= \\displaystyle\n",
     "-\\frac{1}{2}\n",
     "(\\xbb - \\lbb^{-1} \\mb)^{-1}\n",
     "\\lbb\n",
@@ -712,7 +713,7 @@
     "\\right) \\xab\n",
     "\\\\\n",
     "& ~~~\n",
-    "+ \\xabt \\left( \\laa - \\lab \\lbbi \\lba \\right)^{-1} \\muab\n",
+    "+ \\xabt \\left( \\laa - \\lab \\lbbi \\lba \\right) \\muab\n",
     "+ const\n",
     "}\n",
     "$$"
@@ -1329,7 +1330,7 @@
   "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -1341,7 +1342,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -1349,8 +1351,47 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
