--- a/ml/probability-distributions/5-nonparametric-methods.ipynb
+++ b/ml/probability-distributions/5-nonparametric-methods.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-30T19:22:50.591528Z",
+     "start_time": "2017-10-30T19:22:49.826176Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -389,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Two contradictory assumptions\n",
+    "## Two contradictory assumptions\n",
     "* the region $\\mathcal{R}$ be sufficiently small that the density is approximately constant over the region\n",
     "* Yet sufficiently large (in relation to the value of that density) that the number K of points falling inside the region is sufficient for the binomial distribution to be sharply peaked."
    ]
@@ -398,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Parzen window\n",
+    "### Parzen window\n",
     "\n",
     "Assume that the region $\\mathcal{R}$ to be a unit hypercube centered at the origin. Then to count the number of points that falling inside region, we define the kernel function\n",
     "$$\n",
@@ -592,7 +598,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -600,8 +607,47 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
