--- a/math/probability-distributions/bernoulli.ipynb
+++ b/math/probability-distributions/bernoulli.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,10 +253,22 @@
     "* Let $Z \\in \\{0,1\\}$\n",
     "* $\\P{X=1} \\mid \\mu = \\mu$\n",
     "  * $\\Rightarrow \\P{X=0} \\mid \\mu = 1-\\mu$\n",
-    "* $\\bern{X \\mid \\mu} = \\mu^{X} (1-\\mu)^{1-X}$\n",
+    "* $\\bern{X \\mid \\mu} = \\mu^{X} (1-\\mu)^{1-X}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* $\\E{X}   = 1 \\times \\mu + 0 \\times (1-\\mu) = \\mu$\n",
     "* $\\E{X^2} = 1 \\times \\mu + 0 \\times (1-\\mu) = \\mu$\n",
-    "* $\\V{X} = \\E{X^2} - \\E{X}^2 = \\mu - \\mu^2 = \\mu(1-\\mu)$\n",
+    "* $\\V{X} = \\E{X^2} - \\E{X}^2 = \\mu - \\mu^2 = \\mu(1-\\mu)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* $\\d = \\{x_i\\}_{i=1}^{N}$, which are IID, then\n",
     "  * $\\P{\\d \\mid \\mu} = \\prod_{n=1}^{N} \\P{x_n \\mid \\mu}\n",
     "     = \\prod_{n=1}^{N} \\mu^{x_n} (1-\\mu)^{1-x_n}$\n",
@@ -273,7 +286,7 @@
   "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -285,7 +298,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -296,15 +310,45 @@
   },
   "nav_menu": {},
   "toc": {
-   "navigate_menu": true,
+   "nav_menu": {},
    "number_sections": true,
    "sideBar": false,
-   "threshold": 6,
+   "skip_h1_title": false,
    "toc_cell": false,
+   "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
