--- a/ml/linear-models-for-classification/pdm-irls.ipynb
+++ b/ml/linear-models-for-classification/pdm-irls.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-31T11:21:18.669164Z",
+     "start_time": "2017-10-31T11:21:18.205840Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -100,6 +106,7 @@
     "$\n",
     "$\n",
     "\\newcommand{\\commentgray}[1]{\\color{gray}{\\text{#1}}}\n",
+    "\\newcommand{\\ds}{\\displaystyle}\n",
     "$"
    ]
   },
@@ -313,10 +320,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "nr update for minimizing E(**w**) takes the form\n",
-    "$$\n",
-    "\\wnr{new} = \\wnr{old} - \\inv{\\Hb} \\nabla E(\\wb)\n",
-    "$$\n",
+    "nr update for minimizing E(**w**) takes the form  \n",
+    "$ \\ds \\wnr{new} = \\wnr{old} - \\inv{\\Hb} \\nabla E(\\wb)$  \n",
     "where **H** is Hessian: second derivatives of E wrt **w**"
    ]
   },
@@ -324,23 +329,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## nr for lin reg\n",
+    "## Newton-Raphson for lin reg\n",
     "\n",
-    "lets apply nr to lin reg with sum-of-squares error function\n",
+    "lets apply Newton-Raphson to lin reg with sum-of-squares error function\n",
     "[here](../linear-models-for-regression/linear-basis-function-models.ipynb)\n",
     "\n",
     "Remember\n",
     "$$\n",
-    "\\Phi(\\mathbf{X})\n",
-    "=\n",
+    "\\Phi(\\mathbf{X}) =\n",
     "\\mat{\n",
     "\\phi_0(x_1) & \\phi_1(x_1) & \\cdots & \\phi_{M-1}(x_1)\\\\\n",
     "\\phi_0(x_2) & \\phi_1(x_2) & \\cdots & \\phi_{M-1}(x_2)\\\\\n",
     "\\vdots      & \\vdots      & \\ddots & \\vdots\\\\\n",
     "\\phi_0(x_N) & \\phi_1(x_N) & \\cdots & \\phi_{M-1}(x_N)\\\\\n",
     "}\n",
-    "=\n",
-    "\\mat{\n",
+    "\\equiv \\mat{ \\phi_0^T \\\\ \\vdots \\\\ \\phi_{N-1}^T }\n",
+    "\\equiv \\mat{\n",
     "\\varphi_0 & \\cdots & \\varphi_{M-1}\n",
     "}\n",
     "$$"
@@ -369,8 +373,8 @@
     "$$\n",
     "\\arrthree{\n",
     "\\wnr{new} &=\n",
-    "\\wnr{old} = \\invp{\\Phibt \\Phib}\n",
-    "\\Brace{\\Phibt \\Phib \\wb - \\Phibt \\tb}\n",
+    "\\wnr{old} - \\invp{\\Phibt \\Phib}\n",
+    "\\Brace{\\Phibt \\Phib \\wnr{old} - \\Phibt \\tb}\n",
     "\\\\ &=\n",
     "\\invp{\\Phibt \\Phib} \\Phibt \\tb\n",
     "}\n",
@@ -383,14 +387,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## nr for log reg"
+    "## Newton Raphson for logistic regression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### derivatives \n",
+    "### Derivatives \n",
     "\n",
     "as derived [here](#cross-entropy-error)\n",
     "$$\n",
@@ -423,9 +427,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### nr update\n",
+    "### Newton-Raphson update\n",
     "\n",
-    "the nr update for log reg becomes\n",
+    "the Newton-Raphson update for log reg becomes\n",
     "$$\n",
     "\\arrthree{\n",
     "\\wnr{new}\n",
@@ -469,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### what is r?\n",
+    "### what is R?\n",
     "\n",
     "Since\n",
     "$$\n",
@@ -513,7 +517,7 @@
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -525,7 +529,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -535,12 +540,45 @@
    "eqNumInitial": 0
   },
   "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
    "toc_cell": false,
-   "toc_number_sections": true,
-   "toc_threshold": 6,
-   "toc_window_display": false
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
