--- a/ml/probability-distributions/3-gaussian-bayesian-inference.ipynb
+++ b/ml/probability-distributions/3-gaussian-bayesian-inference.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-30T19:04:21.194576Z",
+     "start_time": "2017-10-30T19:04:20.703661Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -285,7 +291,7 @@
     "\\\\\n",
     "&=\n",
     "\\arrthree{\n",
-    "-\\frac{1}{2\\sigma^2} \\sumnN (x_n - \\mu)^2\n",
+    "\\displaystyle -\\frac{1}{2\\sigma^2} \\sumnN (x_n - \\mu)^2\n",
     "-\\frac{1}{2\\sigma_o^2} (\\mu - \\mu_0)^2\n",
     "}\n",
     "}\n",
@@ -346,11 +352,13 @@
     "  \\frac{1}{\\sigma^2} N \\mu_{ML} +\n",
     "  \\frac{1}{\\sigma_0^2} \\mu_0\n",
     " \\right) \\mu\n",
-    "$$\n",
-    "where\n",
-    "$$\n",
-    "\\mu_{ML} = \\frac{1}{N} \\sumnN x_n\n",
-    "$$\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Hence\n",
     "$$\n",
     "\\arrthree{\n",
@@ -365,16 +373,16 @@
     "\\\\\n",
     "&=\n",
     "\\frac{ \n",
-    "  \\left( \n",
+    "  \\displaystyle \\left( \n",
     "    \\frac{1}{\\sigma^2} N \\mu_{ML} +\n",
     "    \\frac{1}{\\sigma_0^2} \\mu_0\n",
     "  \\right)\n",
     "}\n",
     "{\n",
-    " \\frac{N}{\\sigma^2} + \\frac{1}{\\sigma_0^2}\n",
+    " \\displaystyle \\frac{N}{\\sigma^2} + \\frac{1}{\\sigma_0^2}\n",
     "}\n",
     "\\\\\n",
-    "&=\n",
+    "&= \\displaystyle \n",
     "\\frac{N\\sigma_0^2}{N\\sigma_0^2 + \\sigma^2} \\mu_{ML} +\n",
     "\\frac{\\sigma^2}{N\\sigma_0^2 + \\sigma^2} \\mu_0\n",
     "}\n",
@@ -403,10 +411,10 @@
     "\n",
     "$$\n",
     "\\arrthree{\n",
-    "\\mu_N &= \\frac{N\\sigma_0^2}{N\\sigma_0^2 + \\sigma^2} \\mu_{ML} +\n",
+    "\\mu_N &= \\displaystyle \\frac{N\\sigma_0^2}{N\\sigma_0^2 + \\sigma^2} \\mu_{ML} +\n",
     "\\frac{\\sigma^2}{N\\sigma_0^2 + \\sigma^2} \\mu_0\n",
     "\\\\\n",
-    "\\frac{1}{\\sigma_N^2} &= \\frac{N}{\\sigma^2} + \\frac{1}{\\sigma_0^2}\n",
+    "\\displaystyle  \\frac{1}{\\sigma_N^2} &= \\displaystyle \\frac{N}{\\sigma^2} + \\frac{1}{\\sigma_0^2}\n",
     "}\n",
     "$$"
    ]
@@ -810,7 +818,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -818,8 +827,47 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
